syntax = "proto3";

option go_package = "proto/users";

service UsersService {
  rpc CreateUser(CreateRequest) returns (CreateResponse) {}
  rpc UpdateUser(UpdateRequest) returns (UpdateResponse) {}
  rpc DeleteUser(DeleteRequest) returns (DeleteResponse) {}
  rpc LoginCheck(LoginRequest) returns (LoginResponse) {}
}

message Address {
  string street = 1;
  int32 number = 2;
  string city = 3;
  string country =4;
}

message User {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  Address address = 5;
  string role = 6;
}

message CreateRequest {
  User user = 1;
}

message CreateResponse {
  string message = 1;
}

message UpdateRequest {
  User user = 1;
}

message UpdateResponse {
  string message = 1;
}

message DeleteRequest {
  string userEmail = 1;
}

message DeleteResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password =2;
}

message LoginResponse {
  User user = 1;
}